--- a/HungerGamesProjectV2/MainWindow.xaml
+++ b/HungerGamesProjectV2/MainWindow.xaml
@@ -8,5 +8,6 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Frame Name="MainWindowFrame"></Frame>
+        <TextBlock></TextBlock>
     </Grid>
 </Window>
