--- a/HungerGamesProjectV2/Pages/LoginPage.xaml
+++ b/HungerGamesProjectV2/Pages/LoginPage.xaml
@@ -1,29 +1,38 @@
-﻿<Page x:Class="HungerGamesProject.Pages.LoginPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:HungerGamesProject.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+﻿<Page x:Class="HungerGamesProject.Pages.LoginPage" 
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"  
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
+      xmlns:local="clr-namespace:HungerGamesProject.Pages" 
+      mc:Ignorable="d"  
+      d:DesignHeight="450" d:DesignWidth="800" 
       Title="LoginPage">
 
-    <Grid>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Margin="0  0 0 190 ">Добро пожаловать на Голодные Игры.</TextBlock>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
-            
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <TextBlock>Login:</TextBlock>
-                <TextBox  Width="70" Name="LoginTB"></TextBox>
+    <Grid Background="#171717">
+        <Image Source="/Assets/IMG_6095.JPG"  HorizontalAlignment="Right"/>
+
+        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Margin="20  0 0 320 " FontFamily="Impact">
+            <TextBlock.Foreground>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#4A0001"/>
+                    <GradientStop Color="#913B02" Offset="1"/>
+                </LinearGradientBrush>
+            </TextBlock.Foreground>ДОБРО ПОЖАЛОВАТЬ НА ГОЛОДНЫЕ ИГРЫ!</TextBlock>
+
+        <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Orientation="Vertical" Width="200" Margin="20,150,0,0" >
+
+            <StackPanel Margin="3" Orientation="Vertical">
+                <TextBlock Foreground="#FFB2B2B2">Login:</TextBlock>
+                <TextBox  Width="200" x:Name="LoginTB"/>
+
+                <TextBlock Foreground="#FFB2B2B2">Password:</TextBlock>
+                <PasswordBox Width="200 
+                             " Name="PasswordTB"></PasswordBox>
             </StackPanel>
-            <StackPanel Margin="3" Orientation="Horizontal">
-                <TextBlock>Password:</TextBlock>
-                <PasswordBox Width="70" Name="PasswordTB"></PasswordBox>
-            </StackPanel>
-            <StackPanel Margin="5">
-                <Button Margin="2" Height="20" Name="LogBtn" Click="LogBtn_Click">Войти</Button>
-                <Button  Margin="2" Name="RegBtn" Click="RegBtn_Click">К регистрации</Button>
-            </StackPanel>
+        </StackPanel>
+        <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Orientation="Vertical" Width="100" Margin="20,240,0,0">
+            <Button Margin="2" Height="25" Name="LogBtn" Click="LogBtn_Click">Войти</Button>
+            <Button Margin="2" Height="25" Name="RegBtn" Click="RegBtn_Click">К регистрации</Button>
         </StackPanel>
     </Grid>
 </Page>
