--- a/HungerGamesProjectV2/Pages/CreateVote.xaml
+++ b/HungerGamesProjectV2/Pages/CreateVote.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CreateVote">
 
-    <Grid>
+    <Grid Background="#171717">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock>Event:</TextBlock>
             <ComboBox Name="EventNameCB" DisplayMemberPath="event_title"></ComboBox>
