--- a/HungerGamesProjectV2/Pages/PlayerPage.xaml
+++ b/HungerGamesProjectV2/Pages/PlayerPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PlayerPage">
 
-    <Grid>
+    <Grid Background="#171717">
         
     </Grid>
 </Page>
