--- a/HungerGamesProjectV2/Pages/UsersMainPage.xaml
+++ b/HungerGamesProjectV2/Pages/UsersMainPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="UsersMainPage">
 
-    <Grid>
+    <Grid Background="#171717">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="11*"/>
             <ColumnDefinition Width="39*"/>
@@ -31,7 +31,7 @@
             </StackPanel>
             <StackPanel Orientation="Vertical">
                 <Button Margin="0 4 0 0" Visibility="Visible">Button</Button>
-                <Button Margin="0 4 0 0" Visibility="Visible">Button</Button>
+                <Button Margin="0 4 0 0" Visibility="Visible" Click="Button_Click">Button</Button>
                 <Button Margin="0 4 0 0" Visibility="Visible">Button</Button>
                 <Button Margin="0 4 0 0" Visibility="Visible">Button</Button>
                 <Button Margin="0 4 0 0" Visibility="Visible">Button</Button>
